[package]
edition = "2021"
name = "rust-yew-frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = {version = "0.8.0"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
stylist = {version = "0.12.0", features = ["yew", "parser"]}
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.76"
web-sys = { version ="0.3.56", features = ["HtmlInputElement"]}
yew-router = { version = "0.17.0" }
yewdux = { version = "0.9.2" }
